feat: 시간 단위 랭킹 시스템 구현
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>